--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeros pasos con JS</title>
 
-    <script defer src="./js/script.js"></script>
+    
 
 
 </head>
 <body>
     <h1> PREENTREGA1 - CARLOS VALDERRAMA G</h1>
+
+
+
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
