--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeros pasos con JS</title>
-
+    
     
 
 
 </head>
 <body>
     <h1> PREENTREGA1 - CARLOS VALDERRAMA G</h1>
+    <h2> El script de JavaScript realizado es un calculadora de arrays, la cual realiza las siguientes funciones: </h2>
+
+    <ol>
+        <li>Pide el numero total de numeros a ingresar</li>
+        <li>Pide uno a uno los numeros enteros y los guarda en un arreglo. Solo se admiten numeros enteros</li>
+        <li>Finalmente, te permite elegir entre las siguientes opciones: 1) Sumar todos los numeros ingresados 2) Multiplicar todos los numeros del arreglo </li>
+    </ol>
 
 
 
 
-    <script src="./js/script.js"></script>
+
+    <script defer src="./js/script.js"></script>
 </body>
 </html>
