--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <ol>
         <li>Pide el numero total de numeros a ingresar</li>
         <li>Pide uno a uno los numeros enteros y los guarda en un arreglo. Solo se admiten numeros enteros</li>
-        <li>Finalmente, te permite elegir entre las siguientes opciones: 1) Sumar todos los numeros ingresados 2) Multiplicar todos los numeros del arreglo </li>
+        <li>Finalmente, te permite elegir entre las siguientes opciones: 1) Sumar todos los numeros ingresados 
+            2) Multiplicar todos los numeros del arreglo 3) Finaliza el programa </li>
     </ol>
 
 
