--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeros pasos con JS</title>
-    
-    
-
-
+    <title>Análisis de Números</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <h1> PREENTREGA1 - CARLOS VALDERRAMA G</h1>
-    <h2> El script de JavaScript realizado es un calculadora de arrays, la cual realiza las siguientes funciones: </h2>
-
-    <ol>
-        <li>Pide el numero total de numeros a ingresar</li>
-        <li>Pide uno a uno los numeros enteros y los guarda en un arreglo. Solo se admiten numeros enteros</li>
-        <li>Finalmente, te permite elegir entre las siguientes opciones: 1) Sumar todos los numeros ingresados 
-            2) Multiplicar todos los numeros del arreglo 3) Finaliza el programa </li>
-    </ol>
-
-
-
-
-
-    <script  src="./js/script.js"></script>
+    <h1>Análisis de Números. </h1>
+    <h2>Pre-Entrega2 - Carlos Valderrama Guerra</h2>
+    <div class="container">
+        <input type="number" id="numero1" class="numero" placeholder="Número 1">
+        <input type="number" id="numero2" class="numero" placeholder="Número 2">
+        <input type="number" id="numero3" class="numero" placeholder="Número 3">
+        <input type="number" id="numero4" class="numero" placeholder="Número 4">
+        <input type="number" id="numero5" class="numero" placeholder="Número 5">
+        <button id="borrarNumeros">Borrar Números</button>
+        <button id="analizarNumeros">Analizar</button>
+    </div>
+    <div id="resultado"></div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
